fix: define fixed height of feedbackMessage component to have aligned icons (#397)
* fix: feedbackMessage of type loading to have align-items to center to avoid broken size of spinner icon

* fix: applied styles to inline loading icon

---------

--- a/src/hooks/useFeedbackMessage/useFeedbackMessage.module.css
+++ b/src/hooks/useFeedbackMessage/useFeedbackMessage.module.css
@@ -50,10 +50,18 @@
   }
 
   [class~=ant-message-notice-content] {
+    align-items: center;
     padding: calc(var(--spacing-padding-md, 8) * 1px) !important;
+    display: inline-flex !important;
+    height: 40px;
 
     [class~=ant-message-custom-content] {
       display: flex !important;
+      align-items: center;
+
+      [class~=anticon-loading] {
+        top: 0px !important;
+      }
     }
   }
 }
